--- a/index.html
+++ b/index.html
@@ -1783,6 +1783,8 @@
     .history-panel__value .history-checklist__item{ display:flex; align-items:flex-start; gap:.45rem; font-size:.95rem; line-height:1.4; }
     .history-panel__value .history-checklist__box{ flex:none; font-family:"Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; font-size:1.05rem; line-height:1.1; color:#1d4ed8; }
     .history-panel__value .history-checklist__item--unchecked .history-checklist__box{ color:#94a3b8; }
+    .history-panel__value .history-checklist__item--skipped{ color:#94a3b8; text-decoration:line-through; }
+    .history-panel__value .history-checklist__item--skipped .history-checklist__box{ color:#94a3b8; }
     .history-panel__value .history-checklist__label{ display:block; flex:1 1 auto; color:inherit; }
     .history-panel__value .history-checklist__empty{ margin:.35rem 0 0; color:#64748b; font-style:italic; }
     .history-panel__dot{ width:.65rem; height:.65rem; border-radius:999px; background:#94a3b8; flex:none; }
@@ -1910,8 +1912,71 @@
       border-left-color: #1e66f5;
     }
 
+    [data-checklist-item].checklist-item--skipped,
+    [data-checklist-item][data-checklist-skipped="1"] {
+      background: #f1f5f9;
+      border-color: rgba(148, 163, 184, 0.6);
+      color: #64748b;
+    }
+
+    [data-checklist-item].checklist-item--skipped span.flex-1,
+    [data-checklist-item][data-checklist-skipped="1"] span.flex-1 {
+      text-decoration: line-through;
+    }
+
     [data-checklist-item].saved-burst {
       animation: pulseSaved 0.4s ease-out 1;
+    }
+
+    [data-checklist-context-menu] {
+      position: fixed;
+      z-index: 9999;
+      min-width: 190px;
+      padding: 0.25rem;
+      border-radius: 0.85rem;
+      border: 1px solid rgba(148, 163, 184, 0.45);
+      background: rgba(255, 255, 255, 0.96);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 18px 36px rgba(15, 23, 42, 0.2);
+    }
+
+    [data-checklist-context-menu][hidden] {
+      display: none;
+    }
+
+    .checklist-context-menu__action {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      width: 100%;
+      margin: 0;
+      padding: 0.55rem 0.8rem;
+      border: 0;
+      border-radius: 0.65rem;
+      background: transparent;
+      color: #1f2937;
+      font-size: 0.85rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.2s ease, color 0.2s ease;
+    }
+
+    .checklist-context-menu__action::before {
+      content: "⏭";
+      font-size: 1rem;
+      line-height: 1;
+      opacity: 0.75;
+    }
+
+    .checklist-context-menu__action[data-action-state="resume"]::before {
+      content: "↩";
+    }
+
+    .checklist-context-menu__action:hover,
+    .checklist-context-menu__action:focus-visible {
+      background: rgba(59, 130, 246, 0.14);
+      color: #1d4ed8;
+      outline: none;
     }
 
     [data-checklist-item] {
