--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,94 @@
       font-size:.8rem;
       font-weight:600;
       color:var(--consigne-status-accent, #475569);
+      position:relative;
+    }
+    .consigne-row__dot-button {
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:0;
+      margin:0;
+      width:.9rem;
+      height:.9rem;
+      border:none;
+      border-radius:999px;
+      background:transparent;
+      cursor:pointer;
+      transition:transform .2s ease;
+    }
+    .consigne-row__dot-button:focus-visible {
+      outline:2px solid rgba(59,130,246,.65);
+      outline-offset:2px;
+    }
+    .consigne-row__dot-button[aria-expanded="true"] {
+      transform:scale(1.05);
+    }
+    .consigne-row__priority-menu {
+      position:absolute;
+      top:calc(100% + .45rem);
+      right:-.75rem;
+      display:flex;
+      flex-direction:column;
+      min-width:10.5rem;
+      gap:.25rem;
+      padding:.45rem;
+      border-radius:.75rem;
+      border:1px solid rgba(226,232,240,.9);
+      background:#fff;
+      box-shadow:0 18px 40px rgba(15,23,42,.16);
+      z-index:30;
+    }
+    .consigne-row__priority-menu[hidden] {
+      display:none;
+    }
+    .consigne-row__priority-option {
+      display:flex;
+      align-items:center;
+      gap:.55rem;
+      width:100%;
+      border:none;
+      background:transparent;
+      padding:.45rem .55rem;
+      border-radius:.65rem;
+      font:inherit;
+      font-size:.8rem;
+      color:#1f2937;
+      text-align:left;
+      cursor:pointer;
+      transition:background .15s ease, color .15s ease;
+    }
+    .consigne-row__priority-option::before {
+      content:"";
+      width:.55rem;
+      height:.55rem;
+      border-radius:999px;
+      box-shadow:0 0 0 3px rgba(148,163,184,.18);
+      flex:none;
+    }
+    .consigne-row__priority-option[data-priority-tone="high"]::before {
+      background:#2563eb;
+      box-shadow:0 0 0 3px rgba(59,130,246,.25);
+    }
+    .consigne-row__priority-option[data-priority-tone="medium"]::before {
+      background:#64748b;
+      box-shadow:0 0 0 3px rgba(100,116,139,.18);
+    }
+    .consigne-row__priority-option[data-priority-tone="low"]::before {
+      background:#0f172a;
+      box-shadow:0 0 0 3px rgba(15,23,42,.12);
+    }
+    .consigne-row__priority-option:hover,
+    .consigne-row__priority-option:focus-visible {
+      background:rgba(59,130,246,.12);
+      outline:none;
+    }
+    .consigne-row__priority-option[aria-checked="true"] {
+      background:rgba(59,130,246,.18);
+      color:#1d4ed8;
+    }
+    .consigne-row__priority-option[aria-checked="true"]::before {
+      box-shadow:0 0 0 3px rgba(59,130,246,.35);
     }
     .consigne-row__mark {
       display:inline-flex;
