Persist checklist skip state and sync UI

--- a/index.html
+++ b/index.html
@@ -2048,6 +2048,12 @@
       opacity: 1;
     }
 
+    .checklist-skip-btn.is-active,
+    .checklist-skip-btn[aria-pressed="true"] {
+      opacity: 1;
+      color: #2563eb;
+    }
+
     .checklist-skip-btn:focus-visible {
       outline: 2px solid rgba(148, 163, 184, 0.65);
       outline-offset: 2px;
