--- a/index.html
+++ b/index.html
@@ -938,6 +938,9 @@
       box-shadow:none;
       transition:background .2s ease, border-color .2s ease;
     }
+    .consigne-row--actions-open {
+      z-index:200;
+    }
     .consigne-row:first-child {
       border-top:none;
       padding-top:0;
