--- a/index.html
+++ b/index.html
@@ -941,6 +941,9 @@
     .consigne-row--actions-open {
       z-index:200;
     }
+    .consigne-actions--open {
+      z-index:2000;
+    }
     .consigne-row:first-child {
       border-top:none;
       padding-top:0;
