--- a/index.html
+++ b/index.html
@@ -1144,11 +1144,25 @@
     }
     .consigne-history {
       margin-top:.75rem;
-      overflow-x:auto;
-      -webkit-overflow-scrolling:touch;
-      padding:.35rem .15rem .35rem 0;
+      display:flex;
+      align-items:center;
+      gap:.4rem;
       width:100%;
       max-width:100%;
+    }
+    .consigne-history__viewport {
+      position:relative;
+      flex:1;
+      width:100%;
+      max-width:100%;
+      min-width:0;
+      overflow-x:auto;
+      -webkit-overflow-scrolling:touch;
+      scrollbar-width:none;
+      padding:.35rem .15rem .35rem 0;
+    }
+    .consigne-history__viewport::-webkit-scrollbar {
+      display:none;
     }
     .consigne-history__track {
       display:flex;
@@ -1261,12 +1275,42 @@
       text-transform:uppercase;
       color:#64748b;
     }
-    .consigne-history::-webkit-scrollbar {
-      height:4px;
-    }
-    .consigne-history::-webkit-scrollbar-thumb {
-      background:rgba(15,23,42,.2);
+    .consigne-history__nav {
+      flex:none;
+      width:2.1rem;
+      height:2.1rem;
       border-radius:999px;
+      border:1px solid rgba(148,163,184,.35);
+      background:#fff;
+      color:#1f2937;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      box-shadow:0 10px 22px rgba(15,23,42,.12);
+      cursor:pointer;
+      transition:background .15s ease, color .15s ease, border-color .15s ease, box-shadow .15s ease, transform .15s ease;
+    }
+    .consigne-history__nav span {
+      font-size:1.05rem;
+      line-height:1;
+    }
+    .consigne-history__nav:hover:not(:disabled) {
+      background:#f1f5f9;
+      border-color:rgba(148,163,184,.6);
+      transform:translateY(-1px);
+    }
+    .consigne-history__nav:focus-visible {
+      outline:3px solid rgba(59,130,246,.55);
+      outline-offset:2px;
+    }
+    .consigne-history__nav:disabled {
+      opacity:.45;
+      cursor:not-allowed;
+      box-shadow:none;
+      transform:none;
+    }
+    .consigne-history__nav[hidden] {
+      display:none;
     }
     [data-priority-tone="high"] [data-status-dot] {
       position:relative;
