Adjust practice delay selector placement

--- a/index.html
+++ b/index.html
@@ -1989,7 +1989,7 @@
     .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-select{ opacity:.6; cursor:not-allowed; }
     .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-note{ display:none; }
     .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-helper{ display:block; }
-    .practice-editor__delay--inline{ flex-direction:row; align-items:center; gap:.4rem; font-size:.72rem; color:#64748b; }
+    .practice-editor__delay--inline{ flex-direction:row; align-items:center; gap:.4rem; font-size:.72rem; color:#64748b; flex-shrink:0; }
     .practice-editor__delay--inline .practice-editor__delay-label{ font-size:.72rem; font-weight:600; color:inherit; white-space:nowrap; }
     .practice-editor__delay--inline .practice-editor__delay-select{ padding:.25rem .5rem; font-size:.78rem; }
     .practice-editor__delay--inline .practice-editor__delay-note{ display:none; }
