--- a/index.html
+++ b/index.html
@@ -1978,7 +1978,8 @@
     }
     .practice-editor__actions{ position:sticky; bottom:0; display:flex; align-items:center; justify-content:flex-end; gap:.5rem; padding:1rem 0 0; margin-top:1.25rem; border-top:1px solid #e2e8f0; background:linear-gradient(180deg,#ffffff 0%,#f8fafc 100%); }
     .practice-editor__actions-controls{ margin-right:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap; }
-    .practice-editor__actions-buttons{ display:flex; align-items:center; justify-content:flex-end; gap:.5rem; flex-wrap:wrap; }
+    .practice-editor__actions-buttons{ display:flex; align-items:center; justify-content:flex-end; gap:.5rem; flex-wrap:wrap; row-gap:.4rem; }
+    .practice-editor__actions-buttons > .practice-editor__delay{ margin-inline:0 .25rem; }
     .practice-editor__summary{ position:relative; display:flex; align-items:center; }
     .practice-editor__delay{ display:flex; flex-direction:column; align-items:flex-start; gap:.2rem; font-size:.75rem; color:#475569; min-width:0; }
     .practice-editor__delay-label{ font-size:.7rem; font-weight:600; color:#475569; }
