Add practice consigne archiving flows

--- a/index.html
+++ b/index.html
@@ -2397,6 +2397,13 @@
                     role="menuitem">
               🔔 Activer les notifications
             </button>
+            <button type="button"
+                    class="user-actions__item"
+                    id="user-actions-archives"
+                    data-practice-archives
+                    role="menuitem">
+              🗄️ Voir les réponses archivées
+            </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
                     class="user-actions__item hidden"
