--- a/index.html
+++ b/index.html
@@ -925,6 +925,8 @@
       flex-direction:column;
       gap:.24rem;
       padding:.32rem 0;
+      width:100%;
+      min-width:0;
       --consigne-status-bg:transparent;
       --consigne-status-border:rgba(148,163,184,.18);
       --consigne-status-text:#0f172a;
@@ -963,6 +965,8 @@
       align-items:flex-start;
       justify-content:space-between;
       gap:.35rem;
+      width:100%;
+      min-width:0;
     }
     .consigne-row__main {
       display:flex;
@@ -1137,6 +1141,176 @@
       flex:none;
       transition:background .2s ease, box-shadow .2s ease, transform .2s ease;
       box-shadow:0 0 0 3px var(--consigne-status-dot-shadow, rgba(148,163,184,.15));
+    }
+    .consigne-history {
+      margin-top:.75rem;
+      display:flex;
+      align-items:center;
+      gap:.4rem;
+      width:100%;
+      max-width:100%;
+    }
+    .consigne-history__viewport {
+      position:relative;
+      flex:1;
+      width:100%;
+      max-width:100%;
+      min-width:0;
+      overflow-x:auto;
+      -webkit-overflow-scrolling:touch;
+      scrollbar-width:none;
+      padding:.35rem .15rem .35rem 0;
+    }
+    .consigne-history__viewport::-webkit-scrollbar {
+      display:none;
+    }
+    .consigne-history__track {
+      display:flex;
+      gap:.5rem;
+      align-items:stretch;
+      min-height:1rem;
+      padding:0 .35rem;
+    }
+    .consigne-history__item {
+      --consigne-history-border:rgba(148,163,184,.28);
+      --consigne-history-bg:rgba(248,250,252,.85);
+      --consigne-history-shadow:rgba(15,23,42,.08);
+      position:relative;
+      display:flex;
+      align-items:center;
+      gap:.55rem;
+      flex:none;
+      padding:.45rem .75rem;
+      border-radius:.95rem;
+      border:1px solid var(--consigne-history-border);
+      background:linear-gradient(135deg, rgba(255,255,255,.96), var(--consigne-history-bg));
+      box-shadow:0 6px 14px var(--consigne-history-shadow);
+      color:var(--consigne-history-text, #0f172a);
+      min-width:4.1rem;
+      transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease, background .18s ease;
+      cursor:pointer;
+      outline:none;
+    }
+    .consigne-history__item:hover {
+      transform:translateY(-1px);
+      box-shadow:0 12px 24px rgba(15,23,42,.12);
+    }
+    .consigne-history__item:focus-visible {
+      outline:3px solid rgba(59,130,246,.55);
+      outline-offset:2px;
+    }
+    .consigne-history__item[data-placeholder="1"] {
+      opacity:.5;
+      box-shadow:none;
+    }
+    .consigne-history__item[data-status="ok-strong"] {
+      --consigne-history-border:rgba(34,197,94,.38);
+      --consigne-history-bg:rgba(187,247,208,.5);
+      --consigne-history-text:#166534;
+      --consigne-history-shadow:rgba(34,197,94,.22);
+    }
+    .consigne-history__item[data-status="ok-soft"] {
+      --consigne-history-border:rgba(74,222,128,.35);
+      --consigne-history-bg:rgba(220,252,231,.55);
+      --consigne-history-text:#15803d;
+      --consigne-history-shadow:rgba(74,222,128,.18);
+    }
+    .consigne-history__item[data-status="mid"] {
+      --consigne-history-border:rgba(234,179,8,.34);
+      --consigne-history-bg:rgba(254,249,195,.6);
+      --consigne-history-text:#92400e;
+      --consigne-history-shadow:rgba(234,179,8,.2);
+    }
+    .consigne-history__item[data-status="ko-soft"] {
+      --consigne-history-border:rgba(248,113,113,.32);
+      --consigne-history-bg:rgba(254,226,226,.58);
+      --consigne-history-text:#b91c1c;
+      --consigne-history-shadow:rgba(248,113,113,.2);
+    }
+    .consigne-history__item[data-status="ko-strong"] {
+      --consigne-history-border:rgba(220,38,38,.36);
+      --consigne-history-bg:rgba(254,202,202,.6);
+      --consigne-history-text:#991b1b;
+      --consigne-history-shadow:rgba(220,38,38,.22);
+    }
+    .consigne-history__item[data-status="note"] {
+      --consigne-history-border:rgba(59,130,246,.3);
+      --consigne-history-bg:rgba(191,219,254,.58);
+      --consigne-history-text:#1d4ed8;
+      --consigne-history-shadow:rgba(59,130,246,.18);
+    }
+    .consigne-history__item[data-status="na"] {
+      --consigne-history-border:rgba(148,163,184,.32);
+      --consigne-history-bg:rgba(226,232,240,.55);
+      --consigne-history-text:#0f172a;
+      --consigne-history-shadow:rgba(148,163,184,.16);
+    }
+    .history-dialog__value {
+      width:100%;
+    }
+    .consigne-history__dot.consigne-row__dot {
+      width:.6rem;
+      height:.6rem;
+      box-shadow:none;
+      flex:none;
+    }
+    .consigne-history__meta {
+      display:flex;
+      flex-direction:column;
+      gap:.1rem;
+      line-height:1.25;
+      min-width:0;
+    }
+    .consigne-history__label {
+      font-size:.78rem;
+      font-weight:600;
+      letter-spacing:.02em;
+      color:inherit;
+      word-break:break-word;
+    }
+    .consigne-history__weekday {
+      font-size:.65rem;
+      font-weight:500;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      color:#64748b;
+    }
+    .consigne-history__nav {
+      flex:none;
+      width:2.1rem;
+      height:2.1rem;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.35);
+      background:#fff;
+      color:#1f2937;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      box-shadow:0 10px 22px rgba(15,23,42,.12);
+      cursor:pointer;
+      transition:background .15s ease, color .15s ease, border-color .15s ease, box-shadow .15s ease, transform .15s ease;
+    }
+    .consigne-history__nav span {
+      font-size:1.05rem;
+      line-height:1;
+    }
+    .consigne-history__nav:hover:not(:disabled) {
+      background:#f1f5f9;
+      border-color:rgba(148,163,184,.6);
+      transform:translateY(-1px);
+    }
+    .consigne-history__nav:focus-visible {
+      outline:3px solid rgba(59,130,246,.55);
+      outline-offset:2px;
+    }
+    .consigne-history__nav:disabled {
+      opacity:.45;
+      cursor:not-allowed;
+      box-shadow:none;
+      transform:none;
+    }
+    .consigne-history__nav[hidden] {
+      display:none;
     }
     [data-priority-tone="high"] [data-status-dot] {
       position:relative;
@@ -1804,8 +1978,26 @@
       pointer-events:none;
     }
     .practice-editor__actions{ position:sticky; bottom:0; display:flex; align-items:center; justify-content:flex-end; gap:.5rem; padding:1rem 0 0; margin-top:1.25rem; border-top:1px solid #e2e8f0; background:linear-gradient(180deg,#ffffff 0%,#f8fafc 100%); }
-    .practice-editor__actions-buttons{ display:flex; align-items:center; gap:.5rem; }
-    .practice-editor__summary{ margin-right:auto; position:relative; display:flex; align-items:center; }
+    .practice-editor__actions-controls{ margin-right:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap; }
+    .practice-editor__actions-buttons{ display:flex; align-items:center; justify-content:flex-end; gap:.5rem; flex-wrap:wrap; row-gap:.4rem; }
+    .practice-editor__actions-buttons > .practice-editor__delay{ margin-inline:0 .25rem; }
+    .practice-editor__summary{ position:relative; display:flex; align-items:center; }
+    .practice-editor__delay{ display:flex; flex-direction:column; align-items:flex-start; gap:.2rem; font-size:.75rem; color:#475569; min-width:0; }
+    .practice-editor__delay-label{ font-size:.7rem; font-weight:600; color:#475569; }
+    .practice-editor__delay-select{ border:1px solid #E2E8F0; border-radius:.6rem; padding:.35rem .55rem; font-size:.85rem; color:#334155; background:#fff; }
+    .practice-editor__delay-select:focus-visible{ outline:2px solid rgba(59,130,246,0.4); outline-offset:2px; }
+    .practice-editor__delay-note{ font-size:.7rem; color:#94a3b8; }
+    .practice-editor__delay-helper{ font-size:.68rem; color:#94a3b8; display:none; }
+    .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-select{ opacity:.6; cursor:not-allowed; }
+    .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-note{ display:none; }
+    .practice-editor__delay[aria-disabled="true"] .practice-editor__delay-helper{ display:block; }
+    .practice-editor__delay--inline{ flex-direction:row; align-items:center; gap:.4rem; font-size:.72rem; color:#64748b; flex-shrink:0; }
+    .practice-editor__delay--inline .practice-editor__delay-label{ font-size:.72rem; font-weight:600; color:inherit; white-space:nowrap; }
+    .practice-editor__delay--inline .practice-editor__delay-select{ padding:.25rem .5rem; font-size:.78rem; }
+    .practice-editor__delay--inline .practice-editor__delay-note{ display:none; }
+    .practice-editor__delay--inline .practice-editor__delay-helper{ display:none; font-size:.7rem; }
+    .practice-editor__delay--inline[aria-disabled="true"]{ flex-direction:column; align-items:flex-end; gap:.3rem; }
+    .practice-editor__delay--inline[aria-disabled="true"] .practice-editor__delay-helper{ display:block; text-align:right; }
     .practice-editor__summary-toggle{ display:inline-flex; align-items:center; gap:.45rem; font-size:.9rem; }
     .practice-editor__summary[data-summary-selected="1"] .practice-editor__summary-toggle{ color:#5b21b6; font-weight:600; }
     .practice-editor__summary-menu{ position:absolute; bottom:calc(100% + .5rem); left:0; min-width:14rem; padding:.5rem; border-radius:.75rem; border:1px solid rgba(148,163,184,0.35); background:#fff; box-shadow:0 16px 32px rgba(15,23,42,0.18); display:flex; flex-direction:column; gap:.25rem; z-index:60; }
@@ -2205,6 +2397,13 @@
                     data-enabled="0"
                     role="menuitem">
               🔔 Activer les notifications
+            </button>
+            <button type="button"
+                    class="user-actions__item"
+                    id="user-actions-archives"
+                    data-practice-archives
+                    role="menuitem">
+              🗄️ Voir les réponses archivées
             </button>
             <div class="user-actions__separator" role="presentation"></div>
             <button type="button"
