--- a/index.html
+++ b/index.html
@@ -1666,6 +1666,13 @@
     .week-picker{ display:flex; gap:.5rem; }
     .week-picker button.is-active{ background:var(--accent-600); color:#fff; border-color:var(--accent-600); }
     .goal-month-pill{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .75rem; border-radius:999px; background:var(--accent-50); border:1px solid var(--accent-200); font-size:.85rem; font-weight:600; color:#4338ca; }
+    .goal-reminder-btn{ border-radius:999px; padding:.35rem .75rem; border:1px solid transparent; transition:background .15s ease, border-color .15s ease, color .15s ease; }
+    .goal-reminder-btn:hover,
+    .goal-reminder-btn:focus-visible{ background:var(--accent-50); border-color:var(--accent-200); outline:none; color:#4f46e5; }
+    .goal-reminder-btn[data-email-state="on"]{ background:rgba(99,102,241,.12); border-color:rgba(129,140,248,.4); color:#4f46e5; }
+    .goal-reminder-icon-wrap{ width:26px; height:26px; border-radius:999px; background:rgba(148,163,184,.18); display:inline-flex; align-items:center; justify-content:center; color:#475569; transition:background .15s ease, color .15s ease; }
+    .goal-reminder-btn[data-email-state="on"] .goal-reminder-icon-wrap{ background:#4f46e5; color:#fff; }
+    .goal-reminder-icon{ width:16px; height:16px; display:block; }
 
     .history-scroll{ overflow-x:auto; -webkit-overflow-scrolling:touch; }
     .history-table{ min-width:720px; }
