--- a/index.html
+++ b/index.html
@@ -1652,13 +1652,14 @@
     .goal-row--editable{ cursor:pointer; }
     .goal-row--editable .goal-quick,
     .goal-row--editable .goal-quick *{ cursor:auto; }
-    .goal-title{ flex:1; width:100%; }
+    .goal-title{ flex:1; width:100%; display:flex; align-items:center; gap:.5rem; }
     .goal-title__button{ display:flex; flex-direction:column; align-items:flex-start; gap:2px; width:100%; background:none; border:none; padding:0; font:inherit; color:inherit; text-align:left; cursor:grab; }
     .goal-title__button:active{ cursor:grabbing; }
     .goal-list--dragging [data-goal-drag-source]{ cursor:grabbing; }
     .goal-title__button:hover .goal-title__text{ text-decoration:underline; }
     .goal-title__button:focus-visible{ outline:2px solid var(--accent-400); outline-offset:2px; border-radius:6px; }
-    .goal-title__text{ font-weight:600; }
+    .goal-title__text{ font-weight:600; word-break:break-word; }
+    .goal-actions{ display:flex; align-items:center; gap:.5rem; }
     .goal-title__subtitle{ color:var(--muted); font-size:.75rem; }
     .goal-quick{ width:100%; }
     .goal-quick select{ width:100%; }
@@ -1668,7 +1669,7 @@
     .week-picker{ display:flex; gap:.5rem; }
     .week-picker button.is-active{ background:var(--accent-600); color:#fff; border-color:var(--accent-600); }
     .goal-month-pill{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .75rem; border-radius:999px; background:var(--accent-50); border:1px solid var(--accent-200); font-size:.85rem; font-weight:600; color:#4338ca; }
-    .goal-reminder-btn{ border-radius:999px; padding:.35rem .75rem; border:1px solid transparent; transition:background .15s ease, border-color .15s ease, color .15s ease; }
+    .goal-reminder-btn{ display:inline-flex; align-items:center; gap:6px; border-radius:999px; padding:.35rem .75rem; border:1px solid transparent; transition:background .15s ease, border-color .15s ease, color .15s ease; }
     .goal-reminder-btn:hover,
     .goal-reminder-btn:focus-visible{ background:var(--accent-50); border-color:var(--accent-200); outline:none; color:#4f46e5; }
     .goal-reminder-btn[data-email-state="on"]{ background:rgba(99,102,241,.12); border-color:rgba(129,140,248,.4); color:#4f46e5; }
@@ -1676,6 +1677,41 @@
     .goal-reminder-btn[data-email-state="on"] .goal-reminder-icon-wrap{ background:#4f46e5; color:#fff; }
     .goal-reminder-icon{ width:16px; height:16px; display:block; }
     .goal-row.is-dragging{ opacity:0.6; }
+
+    @media (max-width: 640px) {
+      .goal-header{ flex-direction:column; align-items:flex-start; gap:.65rem; }
+      .goal-nav{ width:100%; justify-content:flex-start; }
+      .goal-timeline{ padding:0; gap:.85rem; }
+      .goal-month{ background:transparent; border:none; box-shadow:none; padding:0; border-radius:0; }
+      .goal-month--current{ box-shadow:none; border:none; }
+      .goal-month__header{ flex-direction:column; align-items:flex-start; gap:.5rem; margin-bottom:.75rem; }
+      .goal-month__title{ font-size:1.05rem; }
+      .goal-month__add{ width:100%; justify-content:center; padding:.5rem .75rem; font-size:.82rem; border-radius:.9rem; }
+      .goal-monthly{ border:none; background:transparent; padding:0; margin-bottom:.75rem; }
+      .goal-monthly__title{ font-size:.78rem; color:#6b21a8; }
+      .goal-list{ padding-left:0; }
+      .goal-row{ padding:14px 16px; border-radius:14px; border-left-width:3px; background:#fff; box-shadow:0 10px 24px rgba(15,23,42,.08); }
+      .goal-row:hover{ box-shadow:0 12px 28px rgba(15,23,42,.12); }
+      .goal-row--positive,
+      .goal-row--neutral,
+      .goal-row--negative,
+      .goal-row--none{ background:#fff; }
+      .goal-title{ flex-direction:column; align-items:flex-start !important; gap:.9rem; }
+      .goal-actions{ width:100%; justify-content:flex-start; flex-wrap:wrap; }
+      .goal-actions .goal-reminder-btn{ flex:1 1 65%; min-height:44px; justify-content:space-between; padding:.55rem .75rem; border-radius:12px; }
+      .goal-actions [data-open-advanced]{ margin-left:auto; }
+      .goal-actions [data-open-advanced],
+      .goal-actions [data-advanced],
+      .goal-actions .goal-advanced{ width:44px; height:44px; padding:0; border-radius:12px; flex:0 0 44px; }
+      .goal-row[data-inline-new="1"] .goal-actions .goal-reminder-btn{ flex-basis:100%; }
+      .goal-row[data-inline-new="1"] .goal-actions [data-save],
+      .goal-row[data-inline-new="1"] .goal-actions [data-cancel]{ flex:1 1 calc(50% - .4rem); min-height:40px; }
+      .goal-date-pill{ font-size:.75rem; }
+      .goal-reminder-icon-wrap{ width:28px; height:28px; }
+      .goal-quick{ width:100%; }
+      .goal-quick select{ width:100%; font-size:.9rem; padding:.45rem .6rem; border-radius:12px; }
+      .goal-month-pill{ font-size:.78rem; }
+    }
 
     .history-scroll{ overflow-x:auto; -webkit-overflow-scrolling:touch; }
     .history-table{ min-width:720px; }
