--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
     .goal-month{ background:#fff; border-radius:16px; box-shadow:0 10px 28px rgba(79,70,229,.08); padding:16px; border:1px solid rgba(148,163,184,.2); }
     .goal-month--current{ border-color:var(--accent-400); box-shadow:0 12px 32px rgba(99,102,241,.14); }
     .goal-month__header{ display:flex; align-items:center; justify-content:space-between; gap:1rem; margin-bottom:1rem; }
-    .goal-month__title{ margin:0; font-weight:700; font-size:1.15rem; text-transform:capitalize; }
+    .goal-month__title{ margin:0; font-weight:700; font-size:1.15rem; text-transform:capitalize; flex:1; text-align:center; }
     .goal-month__add{ padding:.35rem .9rem; border-radius:999px; font-size:.85rem; }
     .goal-monthly{ border:1px dashed rgba(148,163,184,.35); background:rgba(236,233,255,.6); border-radius:14px; padding:.85rem 1rem; margin-bottom:1rem; }
     .goal-monthly__title{ font-size:.85rem; font-weight:600; color:#5b21b6; text-transform:uppercase; letter-spacing:.03em; }
@@ -1684,8 +1684,8 @@
       .goal-timeline{ padding:0; gap:.85rem; }
       .goal-month{ background:transparent; border:none; box-shadow:none; padding:0; border-radius:0; }
       .goal-month--current{ box-shadow:none; border:none; }
-      .goal-month__header{ flex-direction:column; align-items:flex-start; gap:.5rem; margin-bottom:.75rem; }
-      .goal-month__title{ font-size:1.05rem; }
+      .goal-month__header{ flex-direction:column; align-items:center; gap:.5rem; margin-bottom:.75rem; }
+      .goal-month__title{ font-size:1.05rem; text-align:center; width:100%; }
       .goal-month__add{ width:100%; justify-content:center; padding:.5rem .75rem; font-size:.82rem; border-radius:.9rem; }
       .goal-monthly{ border:none; background:transparent; padding:0; margin-bottom:.75rem; }
       .goal-monthly__title{ font-size:.78rem; color:#6b21a8; }
