--- a/index.html
+++ b/index.html
@@ -1245,12 +1245,6 @@
       --consigne-history-text:#0f172a;
       --consigne-history-shadow:rgba(148,163,184,.16);
     }
-    .consigne-history__item[data-history-source="bilan"] {
-      --consigne-history-border:rgba(124,58,237,.32);
-      --consigne-history-bg:rgba(237,233,254,.6);
-      --consigne-history-text:#5b21b6;
-      --consigne-history-shadow:rgba(124,58,237,.18);
-    }
     .consigne-history__dot.consigne-row__dot {
       width:.6rem;
       height:.6rem;
@@ -1263,7 +1257,7 @@
       padding:0;
       background:none;
       margin-right:.35rem;
-      color:#5b21b6;
+      color:#2563eb;
       font-size:.9rem;
       font-weight:700;
       line-height:1;
@@ -1271,10 +1265,6 @@
       align-items:center;
       justify-content:center;
       box-shadow:none;
-    }
-    .consigne-history__dot--bilan::before {
-      content:"★";
-      display:inline-block;
     }
     .history-dialog__value {
       width:100%;
