--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
       padding:0;
       background:none;
       margin-right:.35rem;
-      color:#2563eb;
+      color:#7c3aed; /* violet */
       font-size:.9rem;
       font-weight:700;
       line-height:1;
