--- a/index.html
+++ b/index.html
@@ -2565,19 +2565,19 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging-compat.js"></script>
-  <script src="./utils/dates.js"></script>
-  <script src="./utils/colors.js"></script>
-  <script src="schema.js"></script>
-  <script src="modes.js"></script>
-  <script src="goals.js"></script>
-  <script src="autosave.js"></script>
-  <script src="./utils/checklist-state.js"></script>
-  <script src="./text-editor-checkboxes.js"></script>
-  <script src="./editor-checkboxes.js"></script>
-  <script src="./checklist-fix.js"></script>
-  <script src="./checklist-editor.js"></script>
-  <script src="bilan.js"></script>
-  <script src="app.js"></script>
+  <script src="./utils/dates.js?v=2025-10-06-02"></script>
+  <script src="./utils/colors.js?v=2025-10-06-02"></script>
+  <script src="schema.js?v=2025-10-06-02"></script>
+  <script src="modes.js?v=2025-10-06-02"></script>
+  <script src="goals.js?v=2025-10-06-02"></script>
+  <script src="autosave.js?v=2025-10-06-02"></script>
+  <script src="./utils/checklist-state.js?v=2025-10-06-02"></script>
+  <script src="./text-editor-checkboxes.js?v=2025-10-06-02"></script>
+  <script src="./editor-checkboxes.js?v=2025-10-06-02"></script>
+  <script src="./checklist-fix.js?v=2025-10-06-02"></script>
+  <script src="./checklist-editor.js?v=2025-10-06-02"></script>
+  <script src="bilan.js?v=2025-10-06-02"></script>
+  <script src="app.js?v=2025-10-06-02"></script>
   <script>
     (function initApp() {
       if (!window.firebase) {
