--- a/admin.html
+++ b/admin.html
@@ -118,7 +118,7 @@
         });
     })();
   </script>
-  <script src="admin-config.js"></script>
-  <script type="module" src="admin-auth.js"></script>
+  <script src="admin-config.js?v=2025-10-06-02"></script>
+  <script type="module" src="admin-auth.js?v=2025-10-06-02"></script>
 </body>
 </html>
